@@ -145,6 +145,14 @@ public class Config
     public boolean rpc_keepalive = true;
     public int internode_send_buff_size_in_bytes = 0;
     public int internode_recv_buff_size_in_bytes = 0;
+    // Defensive settings for protecting Cassandra from true network partitions. See (CASSANDRA-14358) for details.
+    // The amount of time to wait for internode tcp connections to establish.
+    public int internode_tcp_connect_timeout_in_ms = 2000;
+    // The amount of time unacknowledged data is allowed on a connection before we throw out the connection
+    // Note this is only supported on Linux + epoll, and it appears to behave oddly above a setting of 30000
+    // (it takes much longer than 30s) as of Linux 4.12. If you want something that high set this to 0
+    // (which picks up the OS default) and configure the net.ipv4.tcp_retries2 sysctl to be ~8.
+    public int internode_tcp_user_timeout_in_ms = 30000;
 
     public boolean start_native_transport = true;
     public int native_transport_port = 9042;
